--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					id="stop" href="#" class="btn btn-danger"><span
 					class="glyphicon glyphicon-stop"></span> Stop</a><br /> <br /> <a
 					id="play" href="#" class="btn btn-warning"><span
-					class="glyphicon glyphicon-play"></span> Stop</a>
+					class="glyphicon glyphicon-play"></span> Play</a>
 			</div>
 			<div class="col-md-5">
 
